Change default admin username in login logic

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 const isEmergency = (usersData.length===0 && uInput==='SiJaoGithub' && pInput==='Dulido@216326');
 
                 if(user || isEmergency) {
-                    currentUser = user ? user : {username:'Admin', role:'admin', photo:''};
+                    currentUser = user ? user : {username:'SiJaoGithub', role:'admin', photo:''};
                     document.getElementById('loginSection').classList.add('hidden');
                     document.getElementById('pageInput').classList.remove('hidden');
                     
